--- a/style.css/style.css
+++ b/style.css/style.css
@@ -32,19 +32,36 @@ body{
     top: 300px;
     left: 864px;
     background-color: #fff;
+    border-style: solid;
+    border-width: 2px 0px;
+    border-color: #2137fc;
 }
 .diyalogo{
+    position: relative;
     padding: 128px 101px 0 101px;
 }
 .flaglogo{
+    position: relative;
     padding: 32px 216px 109px 216px;
 }
 .backgrd{
     position: relative;
-    
 }
 .gluph{
     position: relative;
-   bottom: 134px;
-   left: 58px;
+    bottom: 120px;
+    left: 80px;
+}
+.border{
+    background-color: #ffce22;
+    position: relative;
+    border-radius: 100%;
+    overflow: hidden;
+    block-size: 85%;
+    top: 34px;
+}
+.secondgluph{
+    position: relative;
+    left: 80px;
+    bottom: 50px;
 }
