--- a/style.css/style.css
+++ b/style.css/style.css
@@ -59,9 +59,16 @@ body{
     overflow: hidden;
     block-size: 85%;
     top: 34px;
+    width: 450px;
+    height: 450px;
+    left: 35px;
 }
 .secondgluph{
     position: relative;
-    left: 80px;
+    left: 50px;
     bottom: 50px;
+}
+.blue{
+    position: relative;
+    left: -30px;
 }
